tests/error/unknown_escape.gw
#! (contains] unrecognized escape sequence
'\o';
